--- a/Results/Table4.tex
+++ b/Results/Table4.tex
@@ -1,44 +1,125 @@
 {
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
-\begin{tabular}{l*{7}{c}}
+\begin{tabular}{l*{9}{c}}
 \hline\hline
-            &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}&\multicolumn{1}{c}{(7)}\\
-            &\multicolumn{1}{c}{Area1}&\multicolumn{1}{c}{Area2}&\multicolumn{1}{c}{Area3}&\multicolumn{1}{c}{Area4}&\multicolumn{1}{c}{Area5}&\multicolumn{1}{c}{std}&\multicolumn{1}{c}{efw}\\
+            &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}&\multicolumn{1}{c}{(7)}&\multicolumn{1}{c}{(8)}&\multicolumn{1}{c}{(9)}\\
+            &\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}\\
 \hline
-centuries   &       0.176\sym{*}  &       0.300\sym{***}&       0.119         &       0.162         &       0.261\sym{***}&     -0.0694\sym{*}  &       0.204\sym{**} \\
-            &     (0.104)         &     (0.112)         &     (0.110)         &     (0.104)         &    (0.0901)         &    (0.0372)         &    (0.0781)         \\
+centuries   &       0.225\sym{***}&       0.196\sym{**} &       0.117         &       0.193\sym{*}  &       0.181\sym{**} &       0.193\sym{***}&       0.164\sym{**} &       0.205\sym{**} &       0.231\sym{***}\\
+            &    (0.0652)         &    (0.0790)         &    (0.0969)         &     (0.115)         &    (0.0872)         &    (0.0723)         &    (0.0693)         &    (0.0956)         &    (0.0844)         \\
 [1em]
-1.colonizer &           0         &           0         &           0         &           0         &           0         &           0         &           0         \\
-            &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         \\
+1.colonizer &                     &           0         &                     &           0         &           0         &           0         &                     &                     &                     \\
+            &                     &         (.)         &                     &         (.)         &         (.)         &         (.)         &                     &                     &                     \\
 [1em]
-2.colonizer &      -0.182         &       2.644\sym{***}&       2.382\sym{***}&       1.552\sym{***}&       2.302\sym{***}&      -0.512\sym{***}&       1.708\sym{***}\\
-            &     (0.131)         &     (0.243)         &     (0.228)         &     (0.227)         &     (0.193)         &    (0.0710)         &     (0.149)         \\
+2.colonizer &                     &       1.511\sym{***}&           0         &       1.484\sym{***}&       1.146\sym{***}&       1.375\sym{***}&           0         &           0         &           0         \\
+            &                     &     (0.165)         &         (.)         &     (0.171)         &     (0.195)         &     (0.158)         &         (.)         &         (.)         &         (.)         \\
 [1em]
-3.colonizer &      -0.250         &       1.475\sym{***}&       1.854\sym{***}&       0.919\sym{***}&       1.538\sym{***}&      -0.471\sym{***}&       1.028\sym{***}\\
-            &     (0.201)         &     (0.159)         &     (0.165)         &     (0.182)         &     (0.178)         &    (0.0801)         &     (0.140)         \\
+3.colonizer &                     &       0.805\sym{***}&      -0.338         &       0.760\sym{***}&       0.654\sym{***}&       0.806\sym{***}&      -0.621\sym{***}&      -0.611\sym{**} &      -0.534\sym{**} \\
+            &                     &     (0.133)         &     (0.288)         &     (0.141)         &     (0.124)         &     (0.133)         &     (0.194)         &     (0.288)         &     (0.233)         \\
 [1em]
-4.colonizer &      -0.552\sym{**} &       2.010\sym{***}&       2.097\sym{***}&       0.361         &       1.851\sym{***}&      -0.494\sym{***}&       0.986\sym{***}\\
-            &     (0.230)         &     (0.566)         &     (0.131)         &     (0.415)         &     (0.218)         &     (0.144)         &     (0.142)         \\
+4.colonizer &                     &       0.997\sym{***}&                     &       0.997\sym{***}&       0.998\sym{***}&       0.997\sym{***}&      0.0658         &      -0.514         &      -0.265         \\
+            &                     &     (0.265)         &                     &     (0.270)         &     (0.269)         &     (0.266)         &     (0.330)         &     (0.416)         &     (0.350)         \\
 [1em]
-5.colonizer &      -1.580\sym{***}&       1.257\sym{***}&       1.879\sym{***}&      -2.353\sym{***}&       1.312\sym{***}&     -0.0889\sym{***}&       0.169\sym{***}\\
-            &    (0.0406)         &    (0.0435)         &    (0.0431)         &    (0.0407)         &    (0.0351)         &    (0.0145)         &    (0.0305)         \\
+5.colonizer &                     &      -0.382\sym{***}&                     &      -0.383\sym{***}&      -0.387\sym{***}&      -0.383\sym{***}&      -1.677\sym{***}&      -1.754\sym{***}&       3.054\sym{***}\\
+            &                     &    (0.0308)         &                     &    (0.0448)         &    (0.0340)         &    (0.0282)         &     (0.234)         &     (0.474)         &     (0.406)         \\
 [1em]
-6.colonizer &      -0.493         &       1.443\sym{***}&       2.628\sym{***}&       1.242\sym{***}&       1.151\sym{***}&      -0.244         &       1.134\sym{***}\\
-            &     (0.974)         &     (0.432)         &     (0.284)         &     (0.421)         &     (0.424)         &     (0.208)         &     (0.199)         \\
+6.colonizer &                     &       0.967\sym{***}&      -0.586\sym{*}  &       1.262\sym{***}&       0.471         &       0.972\sym{***}&      -0.289         &      -0.492         &      -0.375         \\
+            &                     &     (0.292)         &     (0.292)         &     (0.294)         &     (0.348)         &     (0.281)         &     (0.229)         &     (0.385)         &     (0.296)         \\
 [1em]
-7.colonizer &      -0.910\sym{**} &       1.267\sym{***}&       1.647\sym{***}&       1.061\sym{**} &       0.546         &      -0.294         &       0.656\sym{**} \\
-            &     (0.437)         &     (0.481)         &     (0.552)         &     (0.492)         &     (0.335)         &     (0.183)         &     (0.311)         \\
+7.colonizer &                     &       0.437         &      -0.688\sym{***}&       0.346         &       0.294         &       0.442         &      -0.808\sym{***}&      -0.943\sym{**} &      -0.971\sym{***}\\
+            &                     &     (0.305)         &     (0.188)         &     (0.358)         &     (0.268)         &     (0.295)         &     (0.264)         &     (0.383)         &     (0.314)         \\
 [1em]
-8.colonizer &       0.300         &       1.793\sym{***}&       2.519\sym{***}&       1.685\sym{***}&       1.304\sym{***}&      -0.217\sym{*}  &       1.525\sym{***}\\
-            &     (0.300)         &     (0.323)         &     (0.396)         &     (0.312)         &     (0.267)         &     (0.120)         &     (0.235)         \\
+8.colonizer &                     &       1.424\sym{***}&      -0.151         &       1.561\sym{***}&       0.907\sym{***}&       1.429\sym{***}&       0.361         &     -0.0355         &       0.210         \\
+            &                     &     (0.292)         &     (0.298)         &     (0.296)         &     (0.335)         &     (0.284)         &     (0.271)         &     (0.325)         &     (0.230)         \\
 [1em]
-\_cons      &       6.643\sym{***}&       1.950\sym{***}&       4.992\sym{***}&       4.695\sym{***}&       4.266\sym{***}&       2.023\sym{***}&       4.421\sym{***}\\
-            &    (0.0781)         &    (0.0837)         &    (0.0828)         &    (0.0783)         &    (0.0676)         &    (0.0279)         &    (0.0586)         \\
+america     &                     &                     &                     &                     &      -0.859         &                     &                     &                     &                     \\
+            &                     &                     &                     &                     &     (0.652)         &                     &                     &                     &                     \\
+[1em]
+africa      &                     &                     &                     &                     &      -1.410\sym{**} &                     &                     &                     &                     \\
+            &                     &                     &                     &                     &     (0.617)         &                     &                     &                     &                     \\
+[1em]
+asia        &                     &                     &                     &                     &      -0.897         &                     &                     &                     &                     \\
+            &                     &                     &                     &                     &     (0.617)         &                     &                     &                     &                     \\
+[1em]
+lat\_abst    &                     &                     &                     &                     &                     &                     &       1.797\sym{**} &                     &                     \\
+            &                     &                     &                     &                     &                     &                     &     (0.893)         &                     &                     \\
+[1em]
+landlock    &                     &                     &                     &                     &                     &                     &       0.252         &                     &                     \\
+            &                     &                     &                     &                     &                     &                     &     (0.200)         &                     &                     \\
+[1em]
+island      &                     &                     &                     &                     &                     &                     &       0.924\sym{***}&                     &                     \\
+            &                     &                     &                     &                     &                     &                     &     (0.228)         &                     &                     \\
+[1em]
+humid1      &                     &                     &                     &                     &                     &                     &                     &      0.0144         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0212)         &                     \\
+[1em]
+humid2      &                     &                     &                     &                     &                     &                     &                     &     -0.0154         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0351)         &                     \\
+[1em]
+humid3      &                     &                     &                     &                     &                     &                     &                     &     -0.0124         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0232)         &                     \\
+[1em]
+humid4      &                     &                     &                     &                     &                     &                     &                     &      0.0184         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0288)         &                     \\
+[1em]
+temp1       &                     &                     &                     &                     &                     &                     &                     &      0.0316         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0959)         &                     \\
+[1em]
+temp2       &                     &                     &                     &                     &                     &                     &                     &     -0.0657         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0429)         &                     \\
+[1em]
+temp3       &                     &                     &                     &                     &                     &                     &                     &      0.0125         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0436)         &                     \\
+[1em]
+temp4       &                     &                     &                     &                     &                     &                     &                     &    -0.00766         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0407)         &                     \\
+[1em]
+temp5       &                     &                     &                     &                     &                     &                     &                     &     -0.0121         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0413)         &                     \\
+[1em]
+steplow     &                     &                     &                     &                     &                     &                     &                     &      -0.158         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &     (0.272)         &                     \\
+[1em]
+deslow      &                     &                     &                     &                     &                     &                     &                     &      -0.419         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &     (0.313)         &                     \\
+[1em]
+stepmid     &                     &                     &                     &                     &                     &                     &                     &      -0.522         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &     (0.431)         &                     \\
+[1em]
+desmid      &                     &                     &                     &                     &                     &                     &                     &      -1.298\sym{***}&                     \\
+            &                     &                     &                     &                     &                     &                     &                     &     (0.411)         &                     \\
+[1em]
+drystep     &                     &                     &                     &                     &                     &                     &                     &      -0.156         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &     (0.333)         &                     \\
+[1em]
+hiland      &                     &                     &                     &                     &                     &                     &                     &           0         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &         (.)         &                     \\
+[1em]
+drywint     &                     &                     &                     &                     &                     &                     &                     &       0.179         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &     (0.477)         &                     \\
+[1em]
+goldm       &                     &                     &                     &                     &                     &                     &                     &                     &    0.000558         \\
+            &                     &                     &                     &                     &                     &                     &                     &                     &   (0.00489)         \\
+[1em]
+iron        &                     &                     &                     &                     &                     &                     &                     &                     &      0.0499\sym{*}  \\
+            &                     &                     &                     &                     &                     &                     &                     &                     &    (0.0280)         \\
+[1em]
+silv        &                     &                     &                     &                     &                     &                     &                     &                     &      0.0515         \\
+            &                     &                     &                     &                     &                     &                     &                     &                     &    (0.0456)         \\
+[1em]
+zinc        &                     &                     &                     &                     &                     &                     &                     &                     &      0.0424         \\
+            &                     &                     &                     &                     &                     &                     &                     &                     &    (0.0629)         \\
+[1em]
+oilres      &                     &                     &                     &                     &                     &                     &                     &                     & -0.00000104\sym{***}\\
+            &                     &                     &                     &                     &                     &                     &                     &                     &  (7.64e-08)         \\
+[1em]
+\_cons      &       6.064\sym{***}&       4.916\sym{***}&       6.725\sym{***}&       4.918\sym{***}&       6.336\sym{***}&       4.917\sym{***}&       5.723\sym{***}&       7.090\sym{***}&       6.159\sym{***}\\
+            &     (0.152)         &    (0.0593)         &     (0.276)         &    (0.0861)         &     (0.613)         &    (0.0542)         &     (0.309)         &     (1.722)         &     (0.268)         \\
 \hline
-\(N\)       &         107         &         107         &         107         &         107         &         107         &         107         &         107         \\
-\(R^{2}\)   &       0.176         &       0.246         &       0.119         &       0.235         &       0.247         &       0.079         &       0.280         \\
+\(N\)       &         107         &         107         &          59         &          79         &         107         &         103         &          90         &          89         &          89         \\
+\(R^{2}\)   &       0.086         &       0.264         &       0.058         &       0.246         &       0.350         &       0.267         &       0.448         &       0.427         &       0.496         \\
 \hline\hline
-\multicolumn{8}{l}{\footnotesize Standard errors in parentheses}\\
-\multicolumn{8}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
+\multicolumn{10}{l}{\footnotesize Standard errors in parentheses}\\
+\multicolumn{10}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
 \end{tabular}
 }
