--- a/Results/TableB4_B.tex
+++ b/Results/TableB4_B.tex
@@ -8,6 +8,21 @@
 centuries   &      -0.121         &      -0.135         &      0.0150         \\
             &     (0.111)         &     (0.124)         &     (0.137)         \\
 [1em]
+1.colonizer &                     &           0         &           0         \\
+            &                     &         (.)         &         (.)         \\
+[1em]
+2.colonizer &                     &     0.00683         &       0.394         \\
+            &                     &     (0.234)         &     (0.295)         \\
+[1em]
+3.colonizer &                     &      0.0359         &       0.109         \\
+            &                     &     (0.192)         &     (0.158)         \\
+[1em]
+4.colonizer &                     &       0.308         &       0.301         \\
+            &                     &     (0.662)         &     (0.695)         \\
+[1em]
+6.colonizer &                     &       0.552         &       1.146         \\
+            &                     &     (1.055)         &     (0.828)         \\
+[1em]
 america     &                     &                     &       0.117         \\
             &                     &                     &     (0.486)         \\
 [1em]
