--- a/Results/TableB1.tex
+++ b/Results/TableB1.tex
@@ -1,47 +1,20 @@
 {
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
-\begin{tabular}{l*{3}{c}}
+\begin{tabular}{l*{7}{c}}
 \hline\hline
-            &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}\\
-            &\multicolumn{1}{c}{std}&\multicolumn{1}{c}{std}&\multicolumn{1}{c}{std}\\
+            &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}&\multicolumn{1}{c}{(7)}\\
+            &\multicolumn{1}{c}{Area1}&\multicolumn{1}{c}{Area2}&\multicolumn{1}{c}{Area3}&\multicolumn{1}{c}{Area4}&\multicolumn{1}{c}{Area5}&\multicolumn{1}{c}{std}&\multicolumn{1}{c}{avg\_efw}\\
 \hline
-multiple    &      -0.141         &      -0.169\sym{*}  &     -0.0813         \\
-            &    (0.0868)         &    (0.0990)         &     (0.166)         \\
+efw\_colonizer&       0.325         &       1.124\sym{***}&       0.505\sym{*}  &       0.740\sym{**} &       0.881\sym{***}&      -0.146         &       0.716\sym{***}\\
+            &     (0.209)         &     (0.296)         &     (0.259)         &     (0.302)         &     (0.207)         &    (0.0916)         &     (0.193)         \\
 [1em]
-1.colonizer &                     &           0         &           0         \\
-            &                     &         (.)         &         (.)         \\
-[1em]
-2.colonizer &                     &      -0.566\sym{***}&      -0.551\sym{***}\\
-            &                     &    (0.0697)         &    (0.0693)         \\
-[1em]
-3.colonizer &                     &      -0.514\sym{***}&      -0.512\sym{***}\\
-            &                     &    (0.0838)         &    (0.0854)         \\
-[1em]
-4.colonizer &                     &      -0.367\sym{**} &      -0.452\sym{**} \\
-            &                     &     (0.182)         &     (0.226)         \\
-[1em]
-5.colonizer &                     &      0.0857         &     -0.0234         \\
-            &                     &    (0.0990)         &     (0.186)         \\
-[1em]
-6.colonizer &                     &      -0.451\sym{***}&      -0.314         \\
-            &                     &     (0.136)         &     (0.203)         \\
-[1em]
-7.colonizer &                     &      -0.536\sym{***}&      -0.403\sym{*}  \\
-            &                     &     (0.197)         &     (0.222)         \\
-[1em]
-8.colonizer &                     &      -0.446\sym{***}&      -0.330\sym{**} \\
-            &                     &    (0.0886)         &     (0.152)         \\
-[1em]
-centuries   &                     &                     &     -0.0546         \\
-            &                     &                     &    (0.0588)         \\
-[1em]
-\_cons      &       1.475\sym{***}&       1.993         &       2.034\sym{***}\\
-            &    (0.0456)         &         (.)         &    (0.0441)         \\
+\_cons      &       4.298\sym{***}&      -3.893\sym{*}  &       3.728\sym{*}  &       0.786         &      0.0440         &       2.515\sym{***}&       0.984         \\
+            &     (1.572)         &     (2.180)         &     (1.935)         &     (2.264)         &     (1.528)         &     (0.688)         &     (1.436)         \\
 \hline
-\(N\)       &         107         &         107         &         107         \\
-\(R^{2}\)   &       0.020         &       0.072         &       0.083         \\
+\(N\)       &          87         &          87         &          87         &          87         &          87         &          87         &          87         \\
+\(R^{2}\)   &       0.029         &       0.176         &       0.043         &       0.078         &       0.158         &       0.034         &       0.154         \\
 \hline\hline
-\multicolumn{4}{l}{\footnotesize Standard errors in parentheses}\\
-\multicolumn{4}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
+\multicolumn{8}{l}{\footnotesize Standard errors in parentheses}\\
+\multicolumn{8}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
 \end{tabular}
 }
